# E-learning

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_student_instructor.py
accounts/tests/: test_serializer.py  test_views.py
chat/: consumers.py  models.py  routing.py
chat/migrations/: 0001_initial.py
core/: asgi.py  celery.py  permissions.py  settings.py  urls.py
courses/: admin.py  fields.py  instructor_urls.py  models.py  permissions.py  serializers.py  student_urls.py  tasks.py  tests.py  urls.py  utils.py  views.py
courses/migrations/: 0001_initial.py  0002_content_order.py  0002_module_created_module_updated.py  0003_enrollment.py  0003_remove_content_description.py  0004_alter_course_slug_alter_course_title.py  0004_content_slug.py  0005_module_slug.py  0006_content_slug.py  0007_remove_content_owner.py  0008_delete_enrollment.py  0009_filecontent_file_size_filecontent_public_id_and_more.py  0010_alter_course_owner.py
dashboard/: serializers.py  views.py
enrollment/: models.py  serializers.py  urls.py  views.py
enrollment/migrations/: 0001_initial.py  0002_alter_enrollment_status.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.js  index.tsx  theme.js  theme.ts
frontend/src/components/: ContentUpload.jsx  ModuleManagement.jsx
static/css/: base.css
templates/: base.html
templates/registration/: login.html
(+21 files in other folders)
